syntax = "proto3";

package current;

import "github.com/TuneLab/truss/deftree/googlethirdparty/annotations.proto";

service Current {
  rpc PostLocationBigBrother (PostLocationBigBrotherRequest) returns (Empty) {
    option (google.api.http) = {
      post: "/location/bigbrother"
    };
  }
  rpc PostLocationTasker (PostLocationTaskerRequest) returns (Empty) {
    option (google.api.http) = {
      post: "/location/tasker"
      body: "*"
    };
  }
  rpc GetLocation (GetLocationRequest) returns (Location) {
    option (google.api.http) = {
      get: "/location"
    };
  }
}

message PostLocationBigBrotherRequest {
  double latitude  = 1;
  double longitude = 2;
  double accuracy  = 3;
  double altitude  = 4;
  double bearing   = 5;
  double speed     = 6;
  int32  battlevel = 7;
  string time      = 8;
}

message PostLocationTaskerRequest {
  repeated double location = 1;
  double speed     = 2;
  int32  battery   = 3;
  bool   charging  = 4;
  string date_time = 5;
  string secret    = 6;
}

message Empty {
}

message GetLocationRequest {
  string secret = 1;
}

message Location {
  double latitude          = 1;
  double longitude         = 2;
  double speed             = 3;
  int32  battery           = 4;
  bool   charging          = 5;
  string last_updated      = 6;
}
